# maritime_segmentaion

./: README.md  capstone_trial.py
examples/segnet/: CMakeLists.txt  segnet.cpp
object_detection/: CMakeLists.txt  package.xml
object_detection/msg/: Direction.msg
object_detection/scripts/: object_detection_node.py  waterstride_trash_detect.py
rs-record_ex/: CMakeLists.txt  rs-imshow.cpp  rs-record.cpp
